--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "morgan": "^1.9.1",
+    "node": "^14.11.0",
     "path": "^0.12.7"
   }
 }
